library/pod-security-policy/proc-mount/example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-proc-mount
  labels:
    app: nginx-proc-mount
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      procMount: Unmasked #Default
