library/pod-security-policy/proc-mount/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspprocmount
spec:
  crd:
    spec:
      names:
        kind: K8sPSPProcMount
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            procMount:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspprocmount

        violation[{"msg": msg, "details": {}}] {
            c := input_containers[_]
            not input_proc_mount_type_allowed(c)
            msg := sprintf("ProcMount type is not allowed, container: %v. Allowed procMount types: %v", [c.name, input.parameters.procMount])
        }

        input_proc_mount_type_allowed(c) {
          lower(input.parameters.procMountType) == "default"
            lower(c.securityContext.procMount) == "default"
        }

        input_proc_mount_type_allowed(c) {
          lower(input.parameters.procMountType) == "unmasked"
        }


        input_containers[c] {
            c := input.review.object.spec.containers[_]
            c.securityContext.procMount
        }

        input_containers[c] {
            c := input.review.object.spec.initContainers[_]
            c.securityContext.procMount
        }
